--- a/exam_app/templates/dashboard/new_subject_config.html
+++ b/exam_app/templates/dashboard/new_subject_config.html
@@ -247,7 +247,7 @@ h2 {
               />
             </div>
             <div class="mb-3">
-              <label for="subject_type" class="form-label">Subject Type</label>
+              <label for="subject_type" class="form-label">Skill Type</label>
               <div class="form-check form-check-inline">
                 <input
                   class="form-check-input"
@@ -274,7 +274,7 @@ h2 {
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
               <button type="submit" class="btn btn-primary">Create</button>
-              <a href="{% url 'skill_set_config' %}" class="btn btn-secondary">May Be Later</a>
+              <a href="{% url 'skill_set_config' %}" class="btn btn-secondary">Cancel</a>
             </div>
           </form>
         </div>
