--- a/exam_app/templates/exam_portal/introcheckpage.html
+++ b/exam_app/templates/exam_portal/introcheckpage.html
@@ -191,7 +191,7 @@
           microphoneStream = stream;
           microphoneRecorder = analyser;
 
-          setMicrophoneStatus('Microphone checked successfully', true);
+          setMicrophoneStatus('Microphone check successful', true);
         })
         .catch((error) => {
           console.error('Error accessing microphone:', error);
