--- a/exam_app/templates/dashboard/Result.html
+++ b/exam_app/templates/dashboard/Result.html
@@ -261,7 +261,7 @@ input[type="date"]:focus {
     <form method="GET">
         <div class="form-group row mb-3">
           <div class="col-md-4 col-card-5 d-flex align-items-center">
-            <label for="applied_for" class="me-3">Applied for:</label>
+            <label for="applied_for" class="me-3">Job Position:</label>
             <select class="form-control w-50 " id="applied_for" name="applied_for" onchange="this.form.submit()">
               <option value='ALL|0' {% if request.GET.applied_for == '0' %}selected{% endif %}>All</option>
               {% for search in search_filter %}
