--- a/exam_app/templates/dashboard/add_quest.html
+++ b/exam_app/templates/dashboard/add_quest.html
@@ -112,7 +112,7 @@
         </div>
         <div class="form-group d-flex justify-content-between m-4">
           <button type="submit" class="btn btn-primary">Add Question</button>
-          <a href="{% url 'quest_bank' %}" class="btn btn-secondary">May Be Later</a>
+          <a href="{% url 'quest_bank' %}" class="btn btn-secondary">Cancel</a>
         </div>
       </form>
     </div>
