--- a/exam_app/templates/dashboard/exam_submission.html
+++ b/exam_app/templates/dashboard/exam_submission.html
@@ -195,7 +195,7 @@
   <body>
     <div class="wrapper">
       {% if passorfail == 'FAIL'%}
-      <h1>Better Luck Next time!</h1>
+      <h1>Sorry Candidate!</h1>
       <p>You are not reached the requirement!</p>
       <a href="{%url 'logout'%}"  style="background-color: #007bff; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;" >logout</a>
       {% else %}
