--- a/exam_app/templates/dashboard/skill_set_config.html
+++ b/exam_app/templates/dashboard/skill_set_config.html
@@ -222,7 +222,7 @@
   <form method="GET">
     <div class="form-group row mb-3">
      <div class="col-md-5 col-card-5 d-flex justify-content-between align-items-center">
-        <label for="applied_for" class="mr-1">Job Position:</label>
+        <label for="applied_for" class="mr-1" style="margin-left:30px;">Job Position:</label>
         <select class="form-control" style="width:300px" id="applied_for" name="applied_for" onchange="this.form.submit()">
             <option value='All|0' {% if request.GET.applied_for == '0' %}selected{% endif %}>All</option>
             {% for search in search_filter %}
@@ -230,8 +230,8 @@
             {% endfor %}
         </select>
     </div> 
-      <div class="col-md-7 d-flex justify-content-end align-items-center">
-        
+      <div class="col-md-7 d-flex justify-content-end align-items-center" >
+        <label  class="mr-1" style="margin-right:30px;">Status:</label>
         <select class="form-control w-50" id="filter_by" name="filter_by" onchange="this.form.submit()">
           <option value="1" {% if request.GET.filter_by == '1' %}selected{% endif %}>Active</option>
           <option value="2" {% if request.GET.filter_by == '2' %}selected{% endif %} >All</option>
@@ -298,37 +298,37 @@
                                 <label for="job_Position" class="form-label">Job Position</label>
                                 <input type="text" class="form-control" id="job_Position" name="job_Position" value="{{skill.1}}">
                               </div> -->
-                               <div class="mb-3">       
-                                <label for="job_Position" class="form-label">Job Position</label> 
-                                      <select class="form-control" id="job_Position" name="job_Position"> 
-                                               <option value="{{skill.7}}" selected>{{skill.1}}</option> 
-                                                      {% for job in jobs %}
-                                                      <option value="{{job.0}}">{{job.1}}</option>
-                                                          {% endfor %}      
-                                                         </select>      
-                                                        </div>
-                                  <div class="mb-3">       
-                                      <label for="subjects" class="form-label">Job Position</label> 
-                                  <select class="form-control" id="subjects" name="subjects"> 
+                              <div class="mb-3 d-flex flex-column align-items-center">
+                                <label for="job_Position" class="form-label">Job Position</label>
+                                <select class="form-control" id="job_Position" name="job_Position" disabled>
+                                    <option value="{{skill.7}}" selected>{{skill.1}}</option>
+                                    {% for job in jobs %}
+                                    <option value="{{job.0}}">{{job.1}}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                                  <div class="mb-3 d-flex flex-column align-items-center">       
+                                      <label for="subjects" class="form-label">Subject</label> 
+                                  <select class="form-control" id="subjects" name="subjects" disabled> 
                                             <option value="{{skill.8}}" selected >{{skill.2}}</option> 
                                                   {% for subject in subjects %}        
                                                   <option value="{{subject.0}}">{{subject.1}}</option>    
                                                       {% endfor %}      
                                                       </select>
                                                     </div>
-                          <div class="mb-3">
+                          <div class="mb-3 d-flex flex-column align-items-center">
                                 <label for="level" class="form-label">level</label>
-                                <input type="text" class="form-control" id="level" name="level" value="{{skill.3}}">
+                                <input type="text" class="form-control" id="level" name="level" value="{{skill.3}}" disabled>
                               </div>
-                              <div class="mb-3">
+                              <div class="mb-3 d-flex flex-column align-items-center">
                                 <label for="noofquestions" class="form-label">No.Of Questions</label>
                                 <input type="text" class="form-control" id="noofquestions" name="noofquestions" value="{{skill.4}}">
                               </div>
-                              <div class="mb-3">
+                              <div class="mb-3 d-flex flex-column align-items-center">
                                 <label for="cutoffmarks" class="form-label">cut off Marks</label>
                                 <input type="text" class="form-control" id="cutoffmarks" name="cutoffmarks" value="{{skill.5}}">
                               </div>
-                              <div class="mb-3">
+                              <div class="mb-3 d-flex flex-column align-items-center">
                                 <label for="duration" class="form-label">Duration (in min)</label>
                                 <input type="text" class="form-control" id="duration" name="duration" value="{{skill.6}}">
                               </div>
